# MyGame

./: .ignore  CMakeLists.txt
Classes/: CacaScene.cpp  CacaScene.h  HelloWorldScene.cpp  HelloWorldScene.h  appjnii.cpp
cocos2d/cocos/platform/android/libcocos2dx/: .ignore  local.properties
cocos2d/cocos/platform/android/libcocos2dx/gradle/wrapper/: gradle-wrapper.properties
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/src/cpp/: CMakeLists.txt  main.cpp  yuanxiao.cpp
proj.android/app/src/main/java/org/cocos2dx/: AActivity.java  AppActivity.java  AppBActivity.java
proj.ios_mac/MyGame.xcodeproj/: project.pbxproj
proj.ios_mac/MyGame.xcodeproj/project.xcworkspace/xcuserdata/fish.xcuserdatad/: UserInterfaceState.xcuserstate
